# oop_exercise_07

./: CMakeLists.txt  command.h  document.h  editor.h  factory.h  figure.h  main.cpp  makefile  point.h  rectangle.h  square.h  trapez.h
